添加了大学信息相关的接口